syntax = "proto3";

package api;

import "google/api/annotations.proto";

message Delivery {
  // The date this delivery is for in YYYYMMDD.
  string date = 1;

  // The timestamp of the delivery.
  int64 time = 2;
}

message FetchAllRequest {

}

message FetchAllResponse {
  repeated Delivery delivery = 1;
}

message RecordDeliveryRequest {
  int64 date = 1;
}

message RecordDeliveryResponse {

}

service ApiService {
  rpc FetchAll (FetchAllRequest) returns (FetchAllResponse) {
    option (google.api.http) = {
      get: "/v1/fetch-all"
    };
  }

  rpc RecordDelivery (RecordDeliveryRequest) returns (RecordDeliveryResponse) {
    option (google.api.http) = {
      get: "/v1/record"
    };
  }
}
